<resources>
    <string name="app_name">MorseKeyboard</string>
    <string name="mk_settings">Morse Keyboard Settings</string>
    <string name="mk_label">Morse Keyboard</string>

    <string name="label">English (US)</string>

    <string name="st_timing">Timing Settings</string>
    <string name="st_dotlength">Dot Length (ms)</string>
    <string name="st_dashmult">Dash Length (dots)</string>
    <string name="st_elementpause">Pause between Elements (ms)</string>
    <string name="st_characterpause">Pause between Characters (dots)</string>
    <string name="st_wordpause">Pause between Words (dots)</string>
</resources>
